# simple_fastapi

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: main.py  simple_db_connection.py
